fix: floating whats changes z-index

--- a/src/features/FloatingWhatsApp/FloatingWhatsApp.module.scss
+++ b/src/features/FloatingWhatsApp/FloatingWhatsApp.module.scss
@@ -2,4 +2,5 @@
   position: fixed;
   right: 50px;
   bottom: 100px;
+  z-index: 99999;
 }
