--- a/src/features/MenuDropdown/MenuBanner/MenuBanner.module.scss
+++ b/src/features/MenuDropdown/MenuBanner/MenuBanner.module.scss
@@ -23,6 +23,7 @@
 	&Description {
 		height: 340px;
 		overflow-y: scroll;
+		@include scroll;
 	}
 	&Image {
 		img {
