--- a/src/features/MenuDropdown/MenuDropdown.module.scss
+++ b/src/features/MenuDropdown/MenuDropdown.module.scss
@@ -1,24 +1,47 @@
 @import '@styles';
 
 .menuDropdown {
-	padding: 24px 0;
-	background: #272727b9;
-	border-radius: 0px, 0px, 25px, 25px;
-	-webkit-backdrop-filter: blur(10px); /* Required for Safari */
+  padding: 24px 0;
+  background: #272727a5;
+  border-radius: 0px, 0px, 25px, 25px;
+  -webkit-backdrop-filter: blur(10px); /* Required for Safari */
   backdrop-filter: blur(10px);
-	position: absolute;
-	top: 58px;
-	left: 0;
-	right: 0;
-	z-index: 998;
-	&Container {
+  position: absolute;
+  top: 58px;
+  left: 0;
+  right: 0;
+  z-index: 998;
+  &Container {
+    display: flex;
+    gap: 16px;
+  }
+  &.open {
+    visibility: visible;
+  }
+  &.close {
+    visibility: hidden;
+  }
+}
+
+.menuLeft {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: 16px;
+	padding: 16px 56px 16px 0;
+	width: 20%;
+	&Button {
+		width: 100%;
 		display: flex;
-		gap: 16px;
+		align-items: center;
+		justify-content: flex-start;
 	}
-	&.open {
-		visibility: visible;
-	}
-	&.close {
-		visibility: hidden;
+	&Typography {
+		.active {
+			color: $colorPrimary;
+		}
+		.default {
+			color: $colorWhite;
+		}
 	}
 }
